# othellopy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  NOTICE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: branch-policy.yml  ci.yml  publish.yml
src/othellopy/: __init__.py  board.py  core.py  game.py  player.py  players.py  validation.py
src/othellopy/players/: __init__.py  _logic.py  advanced.py  base.py  beginner.py  intermediate.py  manual.py
tests/: __init__.py  test_package.py
