[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "othellopy"
version = "0.1.0"
description = "Python package scaffold for Othello/Reversi-related utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hietan" },
]
keywords = ["othello", "reversi", "board-game"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment :: Board Games",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/Hietan/othellopy"
Repository = "https://github.com/Hietan/othellopy"
Issues = "https://github.com/Hietan/othellopy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/othellopy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
