[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "othellopy"
version = "0.2.3"
description = "Small Othello/Reversi utilities and sample players for Python lessons."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Hietan" },
]
keywords = ["othello", "reversi", "board-game"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment :: Board Games",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.14",
  "pytest>=8",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/Hietan/othellopy"
Repository = "https://github.com/Hietan/othellopy"
PyPI = "https://pypi.org/project/othellopy/"
Issues = "https://github.com/Hietan/othellopy/issues"
Changelog = "https://github.com/Hietan/othellopy/blob/main/CHANGELOG.md"
Security = "https://github.com/Hietan/othellopy/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/othellopy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D212",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
